WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132383
[New Multicolumn] Region offset not factored in when mapping to local coords
https://bugs.webkit.org/show_bug.cgi?id=132383
Summary
[New Multicolumn] Region offset not factored in when mapping to local coords
Dave Hyatt
Reported
2014-04-30 09:00:22 PDT
fast/events/offsetX-offsetY.html is still not quite right when the multicolumn block has borders/padding. The offset of the region from the multicolumn block is not being factored in to the mapping.
Attachments
Patch
(2.63 KB, patch)
2014-04-30 09:02 PDT
,
Dave Hyatt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-30 09:02:25 PDT
Created
attachment 230481
[details]
Patch
Dave Hyatt
Comment 2
2014-04-30 09:43:21 PDT
Fixed in
r168024
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug