[New Multicolumn] Region offset not factored in when mapping to local coords https://bugs.webkit.org/show_bug.cgi?id=132383

Reviewed by Anders Carlsson.

Make sure to cache the offset of the multicolumn set from its parent and then
add that in to the translation offset.

* rendering/RenderMultiColumnFlowThread.cpp:
(WebCore::RenderMultiColumnFlowThread::mapAbsoluteToLocalPoint):



Canonical link: https://commits.webkit.org/150394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168024 268f45cc-cd09-0410-ab3c-d52691b4dbfc